fix issues where page width extended past screen width on mobile

--- a/static/style.css
+++ b/static/style.css
@@ -217,6 +217,10 @@ pre code {
 	display: inline-block;
 }
 
+p code {
+	overflow-wrap: break-word
+}
+
 ul {
 	padding: 0 .5rem 0 2rem;
 	list-style-type: disc;
